Added JWT auth and debug in create TODO Api
